# label-builder

./: CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: create-release-pr.yml  publish.yml
docs/: index.md  label-builder.md  model-as-a-service.md  telicent-enums.md  telicent-header.md
telicent_labels/: __init__.py  idh_model.py  security_labels.py  telicent_model.py  telicentv1.py  telicentv2.py
test/: test_idh_model.py  test_security_labels.py  test_security_labels_telicent_model.py  test_telicent_lib_adapter.py
